--- a/functions/package.json
+++ b/functions/package.json
@@ -13,11 +13,15 @@
   "dependencies": {
     "@google-cloud/firestore": "^2.2.4",
     "firebase-admin": "~6.0.0",
-    "firebase-functions": "^2.1.0"
+    "firebase-functions": "^2.1.0",
+    "googleapis": "^41.0.1"
   },
   "devDependencies": {
     "tslint": "^5.12.0",
     "typescript": "^3.2.2"
   },
-  "private": true
+  "private": true,
+  "engines": {
+    "node": "8"
+  }
 }
